--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # theme: jekyll-theme-cayman
 
 # Site settings
-title: Wml Blog
-SEOTitle: 吴美莲的博客 | Wml Blog
+title: Gop Blog
+SEOTitle: Jim的博客 | Gop Blog
 header-img: img/home-bg.png
-email: 1054527951@qq.com
-description: "前端开发 | 吴美莲，Web & Front-end Engineer | wumeilian的个人博客呀"
-keyword: "wumeilian, wml, wuml, 前端, Wml Blog, 博客，Web, Css, Javascript"
-url: "https://meilianwu.com/"              # your host, for absolute URL
+email: gopzhe@qq.com
+description: "DeepDarkFantasy"
+keyword: "Gop, jim, gopzhe, Python, python, 博客，Web, Css, Javascript"
+url: "https://www.gop666.top"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
